--- a/QuickNotes/app/src/main/res/values/strings.xml
+++ b/QuickNotes/app/src/main/res/values/strings.xml
@@ -19,4 +19,10 @@
     </string>
 
     <string name="title_activity_dashboard">DashboardActivity</string>
+    <string name="title_activity_main2">Main2Activity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
 </resources>
