--- a/QuickNotes/app/src/main/res/values/strings.xml
+++ b/QuickNotes/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
+    <string name="sign_in_agreement">By using QUICKNOTES., you agree to the Terms, Cookie Policy, and Privacy Policy</string>
 </resources>
