--- a/QuickNotes/app/src/main/res/values/strings.xml
+++ b/QuickNotes/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
     <string name="sign_in_agreement">By using QUICKNOTES., you agree to the Terms, Cookie Policy, and Privacy Policy</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
