--- a/QuickNotes/app/src/main/res/values/strings.xml
+++ b/QuickNotes/app/src/main/res/values/strings.xml
@@ -30,4 +30,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login_error">login error</string>
+    <string name="invalid_email">invali email</string>
+    <string name="field_required">field required</string>
+    <string name="invalid_password">invalid password</string>
 </resources>
